[gd_scene load_steps=16 format=3 uid="uid://dwqj1cmy27rl3"]

[ext_resource type="Script" uid="uid://dg5exhyqy3cd2" path="res://UserInterface/user_interface.gd" id="1_di1f0"]
[ext_resource type="Texture2D" uid="uid://dvwqwyn5kedu2" path="res://Assets/UIAssets/Unitframe/HealthBarUnder.png" id="1_xpt2d"]
[ext_resource type="Texture2D" uid="uid://emiu42ea7i7j" path="res://Assets/UIAssets/Unitframe/HealthBarOver.png" id="2_m32rf"]
[ext_resource type="FontFile" uid="uid://d3f6g1qg2f8nu" path="res://Assets/Fonts/Libre_Caslon_Text/LibreCaslonText-Bold.ttf" id="3_5reab"]
[ext_resource type="Texture2D" uid="uid://dt61wrbrwqkto" path="res://Assets/UIAssets/Unitframe/MainBar.png" id="3_odmdq"]
[ext_resource type="Texture2D" uid="uid://cosrombo03vwo" path="res://Assets/UIAssets/Unitframe/BlueBar.png" id="4_fi4ec"]
[ext_resource type="PackedScene" uid="uid://babkac40ej1hy" path="res://UserInterface/inventory.tscn" id="7_4gpsm"]
[ext_resource type="PackedScene" uid="uid://dhf8lj1i25bhu" path="res://UserInterface/loot_container_display.tscn" id="8_urdq0"]

[sub_resource type="LabelSettings" id="LabelSettings_sl0uq"]
font = ExtResource("3_5reab")
font_size = 26
font_color = Color(0.960784, 0.717647, 0.423529, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wy0x0"]
font = ExtResource("3_5reab")
font_size = 24
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_e8h48"]
color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gdpdi"]
font = ExtResource("3_5reab")
font_size = 36
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_jwc83"]
resource_name = "FadeOutText"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/InteractContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/InteractContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_iumen"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/InteractContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/InteractContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8lqap"]
_data = {
&"FadeOutText": SubResource("Animation_jwc83"),
&"RESET": SubResource("Animation_iumen")
}

[node name="UserInterface" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_di1f0")

[node name="HUD" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="InfoBar" type="Control" parent="HUD"]
layout_mode = 2
mouse_filter = 2

[node name="HealthBarUnder" type="TextureRect" parent="HUD/InfoBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_xpt2d")

[node name="HealthBar" type="TextureProgressBar" parent="HUD/InfoBar/HealthBarUnder"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
texture_progress = ExtResource("3_odmdq")

[node name="HealthLabel" type="Label" parent="HUD/InfoBar/HealthBarUnder/HealthBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(95, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 96.0
offset_top = -15.0
offset_right = 191.0
offset_bottom = -15.0
grow_vertical = 2
text = "1000/1000"
label_settings = SubResource("LabelSettings_sl0uq")
vertical_alignment = 1

[node name="XPBar" type="TextureProgressBar" parent="HUD/InfoBar/HealthBarUnder"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
texture_progress = ExtResource("4_fi4ec")

[node name="HealthBarOver" type="TextureRect" parent="HUD/InfoBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_m32rf")

[node name="LevelLabel" type="Label" parent="HUD/InfoBar/HealthBarOver"]
unique_name_in_owner = true
custom_minimum_size = Vector2(95, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 1.0
grow_vertical = 2
text = "999"
label_settings = SubResource("LabelSettings_sl0uq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractContainer" type="VBoxContainer" parent="HUD"]
visible = false
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2

[node name="InteractButton" type="Label" parent="HUD/InteractContainer"]
layout_mode = 2
text = "spacebar"
label_settings = SubResource("LabelSettings_wy0x0")
horizontal_alignment = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="HUD/InteractContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_e8h48")

[node name="InteractText" type="Label" parent="HUD/InteractContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Open chest"
label_settings = SubResource("LabelSettings_gdpdi")
horizontal_alignment = 1
uppercase = true

[node name="Inventory" parent="." instance=ExtResource("7_4gpsm")]
visible = false
layout_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8lqap")
}
autoplay = "RESET"

[node name="LootContainerDisplay" parent="." node_paths=PackedStringArray("inventory") instance=ExtResource("8_urdq0")]
layout_mode = 1
inventory = NodePath("../Inventory")
